--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.proyectofinal">
 
     <application
         android:allowBackup="true"
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.ProyectoFinal"
         tools:targetApi="31">
 
+        <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -24,11 +25,11 @@
             </intent-filter>
         </activity>
 
-        <!-- HomeActivity -->
-        <activity
-            android:name=".HomeActivity"
-            android:exported="true" />
+        <activity android:name=".TaskActivity" android:exported="true" />
+
+        <activity android:name=".HomeActivity" android:exported="true" />
+
+        <activity android:name=".AddActivity" android:exported="true" />
+
     </application>
-
-
 </manifest>
