--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".RegisterActivity" android:exported="true" />
+
         <activity android:name=".TaskActivity" android:exported="true" />
 
         <activity android:name=".HomeActivity" android:exported="true" />
@@ -36,6 +38,7 @@
         <activity android:name=".AcomplishedActivity" android:exported="true" />
 
         <activity android:name=".DeleteActivity" android:exported="true" />
+
 
     </application>
 </manifest>
